--- a/css/style.css
+++ b/css/style.css
@@ -566,9 +566,60 @@ footer p {
     font-weight: bold;
 }
 
+.menu_items_div{
+    width: max-content;
+    margin: 0 auto;
+    margin-top: 40px;
+}
+
+.menu_items_section_title{
+    color: var(--primary-color);
+    border-bottom: 9px solid var(--secondary-color);
+    padding-bottom: 10px;
+}
+
+.menu_item_card{
+    display: flex;
+}
+
+.menu_item_title{
+    color: var(--text-color);
+}
+
+.menu_item_title span{
+    font-size: 24px;
+}
+
+.menu_item_card .menu_item_overlay p{
+    font-family: 'OpenSans', sans-serif;
+}
+
+.menu_item_overlay p{
+    font-size: 16px;
+}
+
+.menu_item_overlay{
+    width: -webkit-fill-available;
+    padding: 13px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
 /* menu end */
 
 /* responsive css start */
+
+@media screen and (max-width: 1199px) {
+    .menu_item_overlay {
+        padding: 0px 13px 13px 13px;
+        font-size: 16px;
+    }
+
+    .menu_item_title{
+        font-size: 26px;
+    }
+}
 
 @media screen and (max-width: 991px) {
 
@@ -670,6 +721,27 @@ footer p {
     .order_today_box{
         bottom: -90px;
         right: 14px;
+    }
+
+    .menu_item_title{
+        font-size: 23px;
+    }
+
+    .menu_title{
+        font-size: 26px;
+    }
+
+    .menu_subtitle{
+        font-size: 20px;
+    }
+
+    #menu_section_two {
+        padding: 5px 0;
+    }
+
+    .menu_section_two_subtitle{
+        font-size: 18px;
+        font-weight: normal;
     }
 }
 
