--- a/wp-content/themes/bdfriendsnfamily/assets/css/style.css
+++ b/wp-content/themes/bdfriendsnfamily/assets/css/style.css
@@ -118,30 +118,73 @@ nav #navbarNav ul li:hover a, nav #navbarNav ul li a.active{
 
 /* banner */
 
-#banner{
-    background: url('../images/banner-3.png') no-repeat left -500px;
-    background-position: center;
-    background-size: cover;
-    height: 550px;
+.banner-slider {
     position: relative;
+    width: 100%;
+    overflow: hidden;
     box-shadow: 5px 10px 15px rgb(0 0 0 / 15%);
 }
 
-.overlay{
-    height: 5px;
-    background: var(--primary-color);
+.banner-slide {
+    position: relative;
     width: 100%;
-    position: absolute;
-    top: 0;
+    height: 550px;
+    overflow: hidden;
 }
 
-.home_title{
-    color: #fff;
+.banner-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+/* Slick slider arrows for banner */
+.banner-slider .slick-prev,
+.banner-slider .slick-next {
+    z-index: 10;
+    width: 50px;
+    height: 50px;
+    background: rgba(140, 6, 6, 0.7);
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.banner-slider .slick-prev:hover,
+.banner-slider .slick-next:hover {
+    background: rgba(140, 6, 6, 0.9);
+    transform: scale(1.1);
+}
+
+.banner-slider .slick-prev {
+    left: 25px;
+}
+
+.banner-slider .slick-next {
+    right: 25px;
+}
+
+.banner-slider .slick-prev:before,
+.banner-slider .slick-next:before {
     font-size: 30px;
-    line-height: 42px;
-    font-family: 'OpenSans', sans-serif;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-    padding-top: 28px;
+    opacity: 1;
+}
+
+/* Slick dots for banner */
+.banner-slider .slick-dots {
+    bottom: 20px;
+    z-index: 10;
+}
+
+.banner-slider .slick-dots li button:before {
+    font-size: 14px;
+    color: #fff;
+    opacity: 0.5;
+}
+
+.banner-slider .slick-dots li.slick-active button:before {
+    color: var(--primary-color);
+    opacity: 1;
 }
 
 .order_today_btn {
